syntax = "proto3";

package order;

service OrderService {
    rpc GetHello (Empty) returns (GetHelloResponse);
}

message Empty {}

message GetHelloResponse {
    string message = 1;
}