syntax = "proto3";

package user;

// Dịch vụ User
service USER_SERVICE {
  rpc GetUserInfo (GetUserInfoRequest) returns (UserResponse);
}

message GetUserInfoRequest {
  int32 id = 1; 
}

message UserResponse {
  int32 id = 1; 
  string username = 2;
  string email = 3;

  // Dùng optional để hỗ trợ null (trong JS sẽ là string | undefined)
  optional string name = 5;   
  optional string avatar = 6; 

  bool is_active = 7;

  // Date thường được chuyển thành ISO String (VD: "2025-12-17T08:30:00Z")
  string created_at = 8;
  string updated_at = 9;
}